--- a/README.adoc
+++ b/README.adoc
@@ -52,7 +52,7 @@ If you use a Mac with Homebrew, you can run the following command:
 $ docker pull mongo
 $ docker network create some-network
 $ docker network ls
-$ docker run --network some-network --name some-mongo -d mongo:tag
+$ docker run --network some-network -p 27017:27017 --name some-mongo -d mongo:tag
 $ docker run -it --network some-network --rm mongo mongosh --host some-mongo test
 ----
 ====
